--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ html, body {
   position: absolute;
   left: 0px;
   top: 0px;
-  background: linear-gradient(-45deg, #400080, #26004d, #000, #000);
+  background: linear-gradient(-45deg, #D43790, #A91B60, #000, #000);
   background-size: 400% 400%;
   animation: gradient 15s ease infinite;
   height: 100vh;
@@ -18,7 +18,7 @@ html, body {
   position: absolute;
   left: 0px;
   top: 100%;
-  background: linear-gradient(-135deg, #400080, #26004d, #000, #000);
+  background: linear-gradient(-135deg, #D43790, #A91B60, #000, #000);
   background-size: 400% 400%;
   animation: gradient 15s ease infinite;
   height: 100vh;
@@ -30,7 +30,7 @@ html, body {
   position: absolute;
   left: 0px;
   top: 200%;
-  background: linear-gradient(-45deg, #400080, #26004d, #000, #000);
+  background: linear-gradient(-45deg, #D43790, #A91B60, #000, #000);
   background-size: 400% 400%;
   animation: gradient 15s ease infinite;
   height: 100vh;
@@ -43,7 +43,7 @@ html, body {
 	position: absolute;
   left: 0px;
   top: 300%;
-  background: linear-gradient(-135deg, #400080, #26004d, #000, #000);
+  background: linear-gradient(-135deg, #D43790, #A91B60, #000, #000);
 	background-size: 400% 400%;
 	animation: gradient 15s ease infinite;
 	height: 100vh;
@@ -56,7 +56,7 @@ html, body {
 	position: absolute;
   left: 0px;
   top: 400%;
-  background: linear-gradient(-45deg, #400080, #26004d, #000, #000);
+  background: linear-gradient(-45deg, #D43790, #A91B60, #000, #000);
 	background-size: 400% 400%;
 	animation: gradient 15s ease infinite;
 	height: 100vh;
